--- a/css/styles.css
+++ b/css/styles.css
@@ -354,10 +354,10 @@ body {
   color: white !important;
 }
 
-.ClimaSection {
+.memoryGameSection {
   background-color: black;
 }
-.ClimaSection div:first-child {
+.memoryGameSection div:first-child {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -366,25 +366,25 @@ body {
   font-family: "Poppins", sans-serif;
   gap: 30px;
 }
-.ClimaSection div:first-child img {
+.memoryGameSection div:first-child img {
   max-width: 250px;
   margin: 50px 20px;
   border-radius: 20px;
 }
-.ClimaSection div:first-child div {
+.memoryGameSection div:first-child div {
   color: white;
   padding-right: 20px;
   max-width: 800px;
 }
-.ClimaSection div:first-child div h2 {
+.memoryGameSection div:first-child div h2 {
   font-size: 40px;
 }
-.ClimaSection div:first-child div .buttons {
+.memoryGameSection div:first-child div .buttons {
   padding-top: 20px;
   display: flex;
   gap: 20px;
 }
-.ClimaSection div:first-child div .buttons button {
+.memoryGameSection div:first-child div .buttons button {
   border: none;
   width: 200px;
   height: 50px;
@@ -395,7 +395,7 @@ body {
   box-shadow: inset 0 0 0 0 #F6BE00;
   transition: ease-in-out 0.4s;
 }
-.ClimaSection div:first-child div .buttons button:hover {
+.memoryGameSection div:first-child div .buttons button:hover {
   box-shadow: inset 200px 0 0 0 #F6BE00;
   transition: ease-in-out 0.4s;
 }
