--- a/css/memoryGame.css
+++ b/css/memoryGame.css
@@ -5,10 +5,13 @@
   font-family: "Poppins", sans-serif;
 }
 
-.disappear {
-  display: none !important;
+.memoryGame {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background-color: #F6BE00;
 }
-
 .memoryGame .btnBack {
   position: absolute;
   top: 0;
@@ -32,6 +35,72 @@
 }
 .memoryGame .btnBack:hover i {
   color: black;
+}
+.memoryGameDisplay {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  min-height: 400px;
+  width: 500px;
+  background-color: #fff;
+}
+.memoryGameDisplay h2 {
+  padding-top: 30px;
+  text-transform: uppercase;
+  font-size: 34px;
+  letter-spacing: 1px;
+}
+.memoryGameDisplay .game {
+  width: 440px;
+  height: 480px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  transform-style: preserve-3d;
+  perspective: 500px;
+  padding: 20px 0px;
+}
+.memoryGameDisplay .game .emojiBox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100px;
+  height: 100px;
+  background-color: #ebebeb;
+  font-size: 44px;
+  cursor: pointer;
+  position: relative;
+  transition: 0.25s;
+  transform: rotateY(180deg);
+}
+.memoryGameDisplay .game .emojiBox.openBox {
+  transform: rotateY(0deg);
+}
+.memoryGameDisplay .game .emojiBox:after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: #ebebeb;
+  transition: 0.25s;
+  transform: rotateY(0deg);
+  backface-visibility: hidden;
+}
+.memoryGameDisplay .game .boxMatch {
+  transform: rotateY(0deg);
+}
+.memoryGameDisplay .game .openBox:after, .memoryGameDisplay .game .boxMatch::after {
+  transform: rotateY(180deg);
+}
+.memoryGameDisplay button {
+  border: none;
+  width: 150px;
+  height: 50px;
+  font-size: 16px;
+  background-color: #F6BE00;
+  border-radius: 5px;
+  margin-bottom: 30px;
+  cursor: pointer;
 }
 
 /*# sourceMappingURL=memoryGame.css.map */
