--- a/css/digitTest.css
+++ b/css/digitTest.css
@@ -6,6 +6,9 @@
 }
 
 .digitTest {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: #F6BE00;
   min-height: 100vh;
   width: 100%;
@@ -33,6 +36,76 @@
 }
 .digitTest .btnBack:hover i {
   color: black;
+}
+.digitTest .hide {
+  display: none;
+}
+.digitTestDisplay {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0px 40px;
+  flex-direction: column;
+  width: 1000px;
+  min-height: 600px;
+  background-color: #FFF;
+  border-radius: 5px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+.digitTestDisplay h2 {
+  font-size: 38px;
+  padding: 10px 0px;
+}
+.digitTestDisplay p {
+  padding: 10px 0px;
+  text-align: center;
+}
+.digitTestDisplay .digitTestText {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  min-height: 10vh;
+  background-color: #ececec;
+  margin: 10px 0px;
+  font-size: 18px;
+  font-weight: 500;
+  padding: 10px 30px;
+}
+.digitTestDisplay textarea {
+  width: 100%;
+  padding: 8px;
+  resize: none;
+  border: 1px solid #000;
+}
+.digitTestDisplay .buttons {
+  display: flex;
+  gap: 10px;
+  padding-top: 10px;
+}
+.digitTestDisplay .buttons button {
+  border: none;
+  background-color: #ffcb1f;
+  padding: 10px 30px;
+  font-size: 16px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+.digitTestDisplay .buttons button:hover {
+  background-color: #F6BE00;
+  transition: 0.3s;
+}
+.digitTestDisplay .textHistory {
+  padding: 10px 0;
+}
+.digitTestDisplay .textHistory h3 {
+  font-size: 26px;
+  padding-top: 10px;
+}
+.digitTestDisplay .textHistory div {
+  padding: 10px 0;
+  border-bottom: 1px solid black;
 }
 
 /*# sourceMappingURL=digitTest.css.map */
