--- a/css/styles.css
+++ b/css/styles.css
@@ -93,7 +93,7 @@ body {
 }
 
 .contentContainer {
-  height: 650px;
+  min-height: 500px;
   margin: 0 auto;
   font-family: "Poppins", sans-serif;
   max-width: 1400px;
@@ -483,7 +483,7 @@ body {
   }
   .contentContainer {
     padding: 0px 20px;
-    height: 400px;
+    min-height: 370px !important;
   }
   .contentContainerTitle {
     margin-top: 40px;
