--- a/scss/digitTest.scss
+++ b/scss/digitTest.scss
@@ -9,8 +9,85 @@
 }
 
 .digitTest{
+    @include mixins.flex-center;
     @include mixins.btnBack;
     background-color: variables.$primaryColor;
     min-height: 100vh;
     width: 100%;
+
+    .hide{
+        display: none;
+    }
+
+    &Display{
+        @include mixins.flex-center;
+        padding: 0px 40px;
+        flex-direction: column;
+        width: 1000px;
+        min-height: 600px;
+        background-color: #FFF;
+        border-radius: 5px;
+        box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+
+        h2{
+            font-size: 38px;
+            padding: 10px 0px;
+        }
+        p{
+            padding: 10px 0px;
+            text-align: center;
+        }
+
+        .digitTestText{
+            @include mixins.flex-center;
+            width: 100%;
+            min-height: 10vh;
+            background-color: #ececec;
+            margin: 10px 0px;
+            font-size: 18px;
+            font-weight: 500;
+            padding: 10px 30px;
+        }
+
+        textarea{
+            width: 100%;
+            padding: 8px;
+            resize: none;
+            border: 1px solid #000;
+        }
+
+        .buttons{
+            display: flex;
+            gap: 10px;
+            padding-top: 10px;
+
+            button{
+                border: none;
+                background-color: #ffcb1f ;
+                padding: 10px 30px;
+                font-size: 16px;
+                border-radius: 5px;
+                cursor: pointer;
+                transition: .3s;
+            }
+
+            button:hover{
+                background-color: variables.$primaryColor;
+                transition: .3s;
+            }
+        }
+
+        .textHistory{
+            padding: 10px 0;
+
+            h3{
+                font-size: 26px;
+                padding-top: 10px;
+            }
+            div{
+                padding: 10px 0; 
+                border-bottom: 1px solid black;
+            }
+        }
+    }
 }
