--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -125,6 +125,12 @@ footer-component{
     }
 }
 
+@media (max-width:775px){
+    .moreContent{
+        gap: 20px !important;
+    }
+}
+
 @media (max-width: 500px){
     .containerFooter{
         flex-direction: column !important;
