--- a/css/digitTest.css
+++ b/css/digitTest.css
@@ -71,6 +71,7 @@
   font-size: 18px;
   font-weight: 500;
   padding: 10px 30px;
+  user-select: none;
 }
 .digitTestDisplay textarea {
   width: 100%;
@@ -106,6 +107,22 @@
 .digitTestDisplay .textHistory div {
   padding: 10px 0;
   border-bottom: 1px solid black;
+}
+
+@media (max-width: 460px) {
+  .digitTestDisplay h2 {
+    font-size: 24px !important;
+  }
+  .digitTestDisplay p {
+    font-size: 14px !important;
+  }
+  .digitTestDisplay .digitTestText {
+    font-size: 15px !important;
+  }
+  .digitTestDisplay .buttons button {
+    font-size: 12px !important;
+    padding: 10px 15px;
+  }
 }
 
 /*# sourceMappingURL=digitTest.css.map */
