--- a/css/todolist.css
+++ b/css/todolist.css
@@ -196,4 +196,20 @@
   transition: 0.3s;
 }
 
+@media (max-width: 550px) {
+  .displayToDo {
+    width: 400px !important;
+    padding: 20px !important;
+  }
+  .displayToDo .inputWrapper input {
+    width: 300px !important;
+  }
+  .displayToDo .toDo {
+    padding: 10px 5px !important;
+  }
+  .displayToDo .toDo .buttonWrapper {
+    gap: 5px !important;
+  }
+}
+
 /*# sourceMappingURL=todolist.css.map */
