--- a/css/memoryGame.css
+++ b/css/memoryGame.css
@@ -55,6 +55,7 @@
   width: 440px;
   height: 480px;
   display: flex;
+  justify-content: center;
   flex-wrap: wrap;
   gap: 10px;
   transform-style: preserve-3d;
@@ -101,6 +102,24 @@
   border-radius: 5px;
   margin-bottom: 30px;
   cursor: pointer;
+}
+
+@media (max-width: 550px) {
+  .memoryGameDisplay {
+    width: 350px !important;
+  }
+  .memoryGameDisplay h2 {
+    font-size: 28px !important;
+  }
+  .memoryGameDisplay .game {
+    width: 300px !important;
+    height: 300px !important;
+  }
+  .memoryGameDisplay .game .emojiBox {
+    width: 60px !important;
+    height: 60px !important;
+    font-size: 32px !important;
+  }
 }
 
 /*# sourceMappingURL=memoryGame.css.map */
