--- a/scss/memoryGame.scss
+++ b/scss/memoryGame.scss
@@ -32,6 +32,7 @@
             width: 440px;
             height: 480px;
             display: flex;
+            justify-content: center;
             flex-wrap: wrap;
             gap: 10px;
             transform-style: preserve-3d;
@@ -88,3 +89,22 @@
     }
 }
 
+@media (max-width: 550px){
+    .memoryGameDisplay{
+        width: 350px !important;
+        h2{
+            font-size: 28px !important;
+        }
+        
+        .game{
+            width: 300px !important;
+            height: 300px !important;
+
+            .emojiBox{
+                width: 60px !important;
+                height: 60px !important;
+                font-size: 32px !important;
+            }
+        }
+    }
+}
